--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=educationSite
-spring.datasource.url=jdbc:mysql://localhost:3306/fitness_database
+spring.datasource.url=jdbc:mysql://localhost:3306/learning_database
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
