--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,6 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.jpa.open-in-view=false
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql=TRACE
+spring.mvc.static-path-pattern=/**
+
 
